# cryptocore

./: Cargo.toml  Makefile  README.md
docs/: API.md  DEMO.md  DEVELOPMENT.md  USERGUIDE.md
scripts/: test.ps1  test.sh  test_nist.ps1  test_nist.sh
src/: lib.rs  main.rs
src/cli/: mod.rs  parser.rs
src/crypto/: aead.rs  aes_ecb.rs  mod.rs
src/crypto/modes/: cbc.rs  cfb.rs  ctr.rs  ecb.rs  gcm.rs  mod.rs  ofb.rs
src/csprng/: mod.rs
src/file/: io.rs  mod.rs
src/hash/: mod.rs  sha256.rs  sha3_256.rs
src/kdf/: hkdf.rs  mod.rs  pbkdf2.rs
src/mac/: hmac.rs  mod.rs
tests/: integration_tests.rs  test_aead.rs  test_csprng.rs  test_etm_integration.rs  test_gcm_comprehensive.rs  test_gcm_large_data.rs  test_gcm_nonce_uniqueness.rs  test_hash.rs  test_hmac.rs  test_integration_aead.rs  test_kdf.rs  test_openssl_compat.rs  test_openssl_compatibility.rs
