[package]
name = "cryptocore"
version = "0.5.0"
edition = "2021"
description = "Command-line utility for file encryption and decryption using AES-128 in various modes with secure key generation"
authors = ["feronski.bkpk@gmail.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/feronski-bkpk/cryptocore"
repository = "https://github.com/feronski-bkpk/cryptocore"
keywords = ["crypto", "encryption", "aes", "cli", "csprng"]
categories = ["command-line-utilities", "cryptography"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = false

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "cryptocore"
path = "src/main.rs"

[[test]]
name = "csprng"
path = "tests/test_csprng.rs"

[[test]]
name = "hash"
path = "tests/test_hash.rs"

[[test]]
name = "hmac"
path = "tests/test_hmac.rs"