[package]
name = "cryptocore"
version = "0.7.0"
edition = "2021"
description = "Command-line utility for file encryption and decryption using AES-128 with AEAD support and key derivation"
authors = ["feronski.bkpk@gmail.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = false

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
sha3 = "0.10"

[dev-dependencies]
tempfile = "3.3"

[[bin]]
name = "cryptocore"
path = "src/main.rs"

[[test]]
name = "csprng"
path = "tests/test_csprng.rs"

[[test]]
name = "hash"
path = "tests/test_hash.rs"

[[test]]
name = "hmac"
path = "tests/test_hmac.rs"

[[test]]
name = "gcm"
path = "tests/test_gcm_comprehensive.rs"

[[test]]
name = "aead"
path = "tests/test_aead.rs"

[[test]]
name = "openssl_compat"
path = "tests/test_openssl_compat.rs"

[[test]]
name = "integration_aead"
path = "tests/test_integration_aead.rs"

[[test]]
name = "openssl_compatibility"
path = "tests/test_openssl_compatibility.rs"

[[test]]
name = "gcm_large_data"
path = "tests/test_gcm_large_data.rs"

[[test]]
name = "gcm_nonce_uniqueness"
path = "tests/test_gcm_nonce_uniqueness.rs"

[[test]]
name = "etm_integration"
path = "tests/test_etm_integration.rs"

[[test]]
name = "kdf"
path = "tests/test_kdf.rs"